tests/baselines/reference/staticInstanceResolution4.errors.txt
staticInstanceResolution4.ts(5,3): error TS2339: Property 'foo' does not exist on type 'typeof A'.


==== staticInstanceResolution4.ts (1 errors) ====
    class A {
       public foo() {}
    }
    
    A.foo();
      ~~~
!!! error TS2339: Property 'foo' does not exist on type 'typeof A'.